[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piccard"
version = "0.0.1"
authors = [
  { name="Maliha Lodi", email="maliha.f.lodi@gmail.com" },
]
description = "Visualizing demographic evolution using geographically inconsistent census data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]

dependencies = [
  "geopandas",
  "matplotlib",
  "networkx",
  "numpy",
  "pandas",
]

[project.urls]
"Homepage" = "https://github.com/lodi-m/piccard"
"Documentation" = "https://htmlpreview.github.io/?https://github.com/lodi-m/piccard/blob/main/docs/documentation.html"
"Research Paper" = "https://www.researchgate.net/publication/326137658_Visualizing_demographic_evolution_using_geographically_inconsistent_census_data"
